Migration to Java 21 and BlueSky, dependencies updates